--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1801,7 +1801,8 @@ body {
   padding: 3em 48px; }
   @media only screen and (max-width: 1023px) {
     .content-wrapper {
-      padding: 3em 10px; } }
+      padding: 3em 10px;
+      overflow-x: hidden; } }
   .content-wrapper.no-vertical, .content-wrapper--mobile.no-vertical {
     padding-top: 0;
     padding-bottom: 0; }
